--- a/app/index.html
+++ b/app/index.html
@@ -159,7 +159,7 @@
 
 <!--//////////////////////////////////////////////////////////////////////////////////////////////////-->
 
-        <script type="text/template" class="detail-template">
+        <script type="text/template" class="product-template">
               <ul class="mainmenu">
                     <li class="button appetizers-button">Appetizers</li>
                     <li class="button entrees-button">Entrees</li>
