--- a/app/index.html
+++ b/app/index.html
@@ -217,6 +217,7 @@
         </script>
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
+        <script src="scripts/data.js"></script>
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
 </body>
