code broken into separate files

--- a/app/index.html
+++ b/app/index.html
@@ -160,26 +160,7 @@
 <!--//////////////////////////////////////////////////////////////////////////////////////////////////-->
 
         <script type="text/template" class="product-template">
-              <ul class="mainmenu">
-                    <li class="button appetizers-button">Appetizers</li>
-                    <li class="button entrees-button">Entrees</li>
-                    <li class="button salads-button">Salads</li>
-                    <li class="button soup-button">Soups</li>
-                    <br>
-                    <li class="button specials-button">Specials</li>
-                    <li class="button basket-button">Baskets</li>
-                    <li class="button lowfat-button">Lo-Fat</li>
-                    <li class="button kids-button">Kids</li>
-                    <br>
-                    <li class="button sides-button">Sides</li>
-                    <li class="button dessert-button">Dessert</li>
-                    <li class="button bevs-button">Beverages</li>
-                    <li class="button dombeer-button">Beer</li>
-                    <br>
-                    <li class="button impbeer-button">Import Beer</li>
-                    <li class="button wine-button">Wine</li>
-                    <li class="button liquor-button">Liquor</li>
-                </ul>
+            
         </script>
 <!--///////////////////////////////////////////////////////////////////////////////////////////////-->
 
@@ -218,6 +199,8 @@
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
         <script src="scripts/data.js"></script>
+        <script src="scripts/view.js"></script>
+        <script src="scripts/router.js"></script>
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
 </body>
