--- a/app/index.html
+++ b/app/index.html
@@ -160,6 +160,7 @@
 <!--//////////////////////////////////////////////////////////////////////////////////////////////////-->
 
         <script type="text/template" class="product-template">
+            <div class="category"> <%= category %> </div>
         </script>
 
 
