stopped multi view instantiation

--- a/app/index.html
+++ b/app/index.html
@@ -158,8 +158,8 @@
                
 
 <!--//////////////////////////////////////////////////////////////////////////////////////////////////-->
-
         <script type="text/template" class="product-template">
+            <div class="button">yo</div>
             
         </script>
 
