--- a/app/index.html
+++ b/app/index.html
@@ -159,7 +159,7 @@
 
 <!--//////////////////////////////////////////////////////////////////////////////////////////////////-->
         <script type="text/template" class="product-template">
-            <div class="button">yo</div>
+            <div class="button"><%= category %></div>
             
         </script>
 
