getting closer to rendering images

--- a/app/index.html
+++ b/app/index.html
@@ -152,7 +152,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="buttons"></div>
+                <div class="menu-buttons"></div>
         </script>
 
                
