more click functions working

--- a/app/index.html
+++ b/app/index.html
@@ -158,7 +158,7 @@
         </script>
 
 <!--//////////////////////////////////////////////////////////////////////////////////////////////////-->
-        <script type="text/template" class="product-template">      
+        <script type="text/template" class="button-template">      
             <a href="">
                 <div class="button"></div>
             </a>
