functional css changes

--- a/app/index.html
+++ b/app/index.html
@@ -115,9 +115,9 @@
                 <div class="total-box">
                     <div class="totalbox">
                         <div class="itemizer"></div>
-                        <span>Subtotal:<div class="subtotal"></div></span>
-                        <span>Tax%:<div class="taxtotal"></div></span>
-                        <span>Total:<div class="totaltotal"></div></span>
+                        <span>Subtotal:<div class="subtotal">$</div></span>
+                        <span>Tax%:<div class="taxtotal">$</div></span>
+                        <span>Total:<div class="totaltotal">$</div></span>
                     </div>
                     <div class="sendmaster">
                         <ul class="sendoptions">
