button view is re-rendering

--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
 
     <script type="text/template" class="login-template">
          <div class="header">
-                <span>RPM<sup>2</sup></span><span2>Technologies™</span2>
+                <span>Andy's Chargrille</span>
         </div>
          <div id="clockinoverlay">
                 <div id="clockinmodal">
@@ -111,7 +111,7 @@
 <!--///////////////////////////////////////////////////////////////////////////////////////////////////////-->
         <script type="text/template" class="order-template">
             <div class="order-header">
-                <span>RPM<sup>2</sup></span><span2>Technologies™</span2>
+                <span>Andy's Chargrille</span>
             </div>
                 <div class="total-box">
                     <div class="totalbox">
@@ -133,7 +133,7 @@
 <!--/////////////////////////////////////////////////////////////////////////////////////////////////-->
     <script type="text/template" class="payment-template">
             <div class="header">
-                <span>RPM<sup>2</sup></span><span2>Technologies™</span2>
+                <span>Andy's Chargrille</span>
             </div>
             <div class="finalbalance"></div>
             <ul class="payments">
