awesome app progress today

--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,14 @@
         <input class="code" placeholder="Add Username"></input>
         <input class="userpassword" placeholder="Add Four Digit Password"></div>
         <div class="codeenter">Enter</div>
+        
+    </div>
+    <div class="addamenu">
+        <h1>Add a New Menu Item:</h1>
+        <input class="categorytitle" placeholder="Add Category"></input>
+        <input class="categoryname" placeholder="Add Name"></input>
+        <input class="price" placeholder="Add Price w/o '$'"></input>
+        <div class="menuenter">Enter</div>
     </div>
     </script>
 
@@ -109,9 +117,9 @@
                 <div class="total-box">
                     <div class="totalbox">
                         <div class="itemizer"></div>
-                        <span>Subtotal:<div class="subtotal">$</div>
-                        <span>Tax%:<div class="taxtotal">$</div></span>
-                        <span>Total:<div class="totaltotal">$</div></span>
+                        <span>Subtotal:<textarea class="subtotal"></textarea>
+                        <span>Tax%:<textarea class="taxtotal"></textarea></span>
+                        <span>Total:<textarea class="totaltotal"></textarea></span>
                     </div>
                     <div class="sendmaster">
                         <ul class="sendoptions">
