save point for view restructure

--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
         
             <div class="loginbox">
                 <input class="userlogin" placeholder="Username"></input>
-                <input class="loginpassword" placeholder="4-Digit Password"></input>
+                <input type="password" name="password" class="password" placeholder="4-Digit Password"></input>
             
                     <div class="submit">Login</div>
 
@@ -124,9 +124,9 @@
                 <div class="total-box">
                     <div class="totalbox">
                         <div class="itemizer"></div>
-                        <span>Subtotal:<textarea class="subtotal"></textarea>
-                        <span>Tax%:<textarea class="taxtotal"></textarea></span>
-                        <span>Total:<textarea class="totaltotal"></textarea></span>
+                        <span>Subtotal:<div class="subtotal"></div>
+                        <span>Tax%:<div class="taxtotal"></textarea></div>
+                        <span>Total:<div class="totaltotal"></textarea></div>
                     </div>
                     <div class="sendmaster">
                         <ul class="sendoptions">
