view restructure complete

--- a/app/index.html
+++ b/app/index.html
@@ -121,21 +121,7 @@
             <div class="order-header">
                 <span>Andy's Chargrille</span>
             </div>
-                <div class="total-box">
-                    <div class="totalbox">
-                        <div class="itemizer"></div>
-                        <span>Subtotal:<div class="subtotal"></div>
-                        <span>Tax%:<div class="taxtotal"></textarea></div>
-                        <span>Total:<div class="totaltotal"></textarea></div>
-                    </div>
-                    <div class="sendmaster">
-                        <ul class="sendoptions">
-                            <li class="sent go-button">Send</li>
-                            <li class="sent gostaybutton">Send & Stay</li>
-                            <li class="pay">$Pay$</li>
-                        </ul>
-                    </div>
-                </div>
+              
                 <div class="menu-buttons"></div>
         </script>
 <!--/////////////////////////////////////////////////////////////////////////////////////////////////-->
@@ -166,6 +152,29 @@
                 <li class="credit-discover"></li>
                 <li class="credit-amex"></li>
             </ul>
+        </script>
+
+<!--//////////////////////////////////////////////////////////////////////////////////////////////////-->
+
+        <script type="text/template" class="runner-template">
+              <div class="total-box">
+                    <div class="totalbox">
+                        <div class="itemizer"></div>
+                        <span>Subtotal:<div class="subtotal"></div>
+                        <span>Tax%:<div class="taxtotal"></textarea></div>
+                        <span>Total:<div class="totaltotal"></textarea></div>
+                    </div>
+                    <div class="sendmaster">
+                        <ul class="sendoptions">
+                            <li class="sent go-button">Send</li>
+                            <li class="sent gostaybutton">Send & Stay</li>
+                            <li class="pay">$Pay$</li>
+                        </ul>
+                    </div>
+                </div>
+
+
+
         </script>
                        
 
