math functions are working now

--- a/app/index.html
+++ b/app/index.html
@@ -135,7 +135,7 @@
                         <div class="number numberenter">Enter</div>
                     </div>
                 </div>
-            <textarea class="finalbalance"></textarea>
+            <div class="finalbalance"></div>
             <ul class="payments">
                 <li class="payment ten">$10</li>
                 <li class="payment twenty">$20</li>
