working demo for now

--- a/app/index.html
+++ b/app/index.html
@@ -78,8 +78,8 @@
             <div class="bar"> 
 
             <ul class="hightops">
-                <li class="hightop1">301</li>
-                <li class="hightop2">302</li>
+                <div class="hightop1">301</div>
+                <div class="hightop2">302</div>
             </ul>
             
             <ul class="stools">
@@ -155,7 +155,7 @@
         <script type="text/template" class="runner-template">
               <div class="total-box">
                     <div class="totalbox">
-                        <div class="itemizer"></div>
+                        <div id="itemizer"></div>
                         <span>Subtotal:<div class="subtotal"></div>
                         <span>Tax%:<div class="taxtotal"></textarea></div>
                         <span>Total:<div class="totaltotal"></textarea></div>
