beginnings of a report page

--- a/app/index.html
+++ b/app/index.html
@@ -193,6 +193,10 @@
 
         </script>
 
+        <script type="text/template" class="report-template">
+                <div class="reportpage"></div>
+        </script>
+
 
           <!-- bower:js -->
         <script src="../bower_components/jquery/dist/jquery.js"></script>
