report view added

--- a/app/index.html
+++ b/app/index.html
@@ -194,7 +194,107 @@
         </script>
 
         <script type="text/template" class="report-template">
-                <div class="reportpage"></div>
+                <div class="reportpage">
+                   <div class="reporttitle">
+                        <h1>End Of Day Sales Order Totals</h1>
+                   </div>
+                   <div class="ownerdiv">
+                        <h1>Restaurant Name: Andys Chargrille</h1>
+                        <h1>Employee: Andy Georgia</h1>
+                   </div>
+                   <div class="daterange">
+                        <h1>Date Range: 7/16/2014 - 7/16/2014</h1>
+                   </div>
+                   <div class="totalsparent">
+                        <h1>Sales Order Totals</h1>
+                   </div>
+                   <div class="paymentcountamount">
+                        <div class="paymenttype">Category</div>
+                        <div class="count">Count</div>
+                        <div class="amount">Amount</div>
+                   </div>
+                  
+                   <div class="itemssoldbody">
+                        <div class="soldbox">Items Sold:</div>
+                        <div class="soldcount">376</div>
+                        <div class="soldamount">$2264.37</div>
+                   </div>
+                    <div class="entreessoldbody">
+                        <div class="entreebox">Entrees Sold:</div>
+                        <div class="entreecount">11</div>
+                        <div class="entreeamount">$439.12</div>
+                   </div>
+                    <div class="basketssoldbody">
+                        <div class="basketbox">Baskets Sold:</div>
+                        <div class="basketcount">3</div>
+                        <div class="basketamount">$39.26</div>
+                   </div>
+                    <div class="saladssoldbody">
+                        <div class="saladbox">Salads Sold:</div>
+                        <div class="saladcount">1</div>
+                        <div class="saladamount">$14.95</div>
+                   </div>
+                   <div class="soupssoldbody">
+                        <div class="soupbox">Soups Sold:</div>
+                        <div class="soupcount">4</div>
+                        <div class="soupamount">$18.61</div>
+                   </div>
+                    <div class="appssoldbody">
+                        <div class="appbox">Appetizers Sold:</div>
+                        <div class="appcount">3</div>
+                        <div class="appamount">$23.41</div>
+                   </div>
+                    <div class="kidssoldbody">
+                        <div class="kidbox">Kid Meals Sold:</div>
+                        <div class="kidcount">1</div>
+                        <div class="kidamount">$5.95</div>
+                   </div>
+                    <div class="sidessoldbody">
+                        <div class="sidebox">Side Items Sold:</div>
+                        <div class="sidecount">13</div>
+                        <div class="sideamount">$51.11</div>
+                   </div>
+                    <div class="lowfatsoldbody">
+                        <div class="lowfatbox">Lo-Fat Sold:</div>
+                        <div class="lowfatcount">4</div>
+                        <div class="lowfatamount">$31.93</div>
+                   </div>
+                    <div class="dessertsoldbody">
+                        <div class="dessertbox">Desserts Sold:</div>
+                        <div class="dessertcount">8</div>
+                        <div class="dessertamount">$47.65</div>
+                   </div>
+                    <div class="beveragesoldbody">
+                        <div class="beveragebox">Beverages Sold:</div>
+                        <div class="beveragecount">73</div>
+                        <div class="beverageamount">$211.01</div>
+                   </div>
+                    <div class="beersoldbody">
+                        <div class="beerbox">Beer Sold:</div>
+                        <div class="beercount">81</div>
+                        <div class="beeramount">$265.03</div>
+                   </div>
+                    <div class="winesoldbody">
+                        <div class="winebox">Wine Sold:</div>
+                        <div class="winecount">45</div>
+                        <div class="wineamount">$349.12</div>
+                   </div>
+                    <div class="liquorsoldbody">
+                        <div class="liquorbox">Liquor Sold:</div>
+                        <div class="liquorcount">111</div>
+                        <div class="liquoramount">$567.43</div>
+                   </div>
+                    <div class="cocktailsoldbody">
+                        <div class="cocktailbox">Cocktails Sold:</div>
+                        <div class="cocktailcount">18</div>
+                        <div class="cocktailamount">$199.79</div>
+                   </div>
+                    <div class="grandtotalamount">
+                        <div class="grandtotal">Grand Total:</div>
+                        <div class="grandtotalcount">376</div>
+                        <div class="grandamount">$2264.37</div>
+                   </div>
+                </div>
         </script>
 
 
