--- a/app/index.html
+++ b/app/index.html
@@ -83,31 +83,31 @@
             </ul>
             
             <ul class="stools">
-                <li class="stool stool1">1</li>
-                <li class="stool stool2">2</li>
-                <li class="stool stool3">3</li>
-                <li class="stool stool4">4</li>
-                <li class="stool stool5">5</li>
-                <li class="stool stool6">6</li>
-                <li class="stool stool7">7</li>
-                <li class="stool stool8">8</li>
+                <div class="stool stool1">1</div>
+                <div class="stool stool2">2</div>
+                <div class="stool stool3">3</div>
+                <div class="stool stool4">4</div>
+                <div class="stool stool5">5</div>
+                <div class="stool stool6">6</div>
+                <div class="stool stool7">7</div>
+                <div class="stool stool8">8</div>
 
             </ul>
 
             </div>
             <ul class="angletables">
-                <li class="table table101">
+                <div class="table table101">
                     <h1>101</h1>
-                </li>
-                <li class="table table102">
+                </div>
+                <div class="table table102">
                     <h1>102</h1>
-                </li>
-                <li class="table table103">
+                </div>
+                <div class="table table103">
                     <h1>103</h1>
-                </li>
-                <li class="table table104">
+                </div>
+                <div class="table table104">
                     <h1>104</h1>
-                </li>
+                </div>
             </ul>
             <ul class="booths">
                 <li class="booth booth201">201</li>
