awesome css changes

--- a/app/index.html
+++ b/app/index.html
@@ -102,6 +102,8 @@
 
       <script type="text/template" class="layout-template">
             <div class="bar"> 
+            <span>Andy's</span>
+            <span2>Chargrille</span2>
 
             <ul class="hightops">
                 <div class="hightop1">301</div>
